--- a/1-city_description.html
+++ b/1-city_description.html
@@ -29,7 +29,7 @@
     >
       <div class="container-fluid">
         <!-- Logo -->
-        <a href="index.html" class="mx-3 navbar_brand">
+        <a href="0-home.html" class="mx-3 navbar_brand">
           <img class="img-fluid" id="logo" src="img/LogoWhite.svg" alt="logo" />
         </a>
 
@@ -110,7 +110,7 @@
         class="hero d-flex align-items-center justify-content-start"
         id="hero-descrizione"
       >
-        <div class="hero-content bg-tertiary p-4 ps-5 text-light w-75">
+        <div class="hero-content bg-tertiary p-4 ps-md-5 text-light w-75">
           <h1>Descrizione</h1>
           <h2 class="lead">Trova il quartiere più adatto a te</h2>
         </div>
@@ -149,7 +149,9 @@
           <div
             class="row flex-md-row-reverse gy-5 gy-md-0 gx-md-5 align-items-center justify-content-between pb-5"
           >
-            <div class="col-md col-lg-5 text-center hand-to-left position-relative">
+            <div
+              class="col-md col-lg-5 text-center hand-to-left position-relative"
+            >
               <img
                 class="img-fluid mb-3"
                 src="img/img_desc2.jpg"
@@ -175,7 +177,9 @@
           <div
             class="row gy-5 gy-md-0 gx-md-5 align-items-center justify-content-between"
           >
-            <div class="col-md col-lg-5 text-center hand-to-right position-relative">
+            <div
+              class="col-md col-lg-5 text-center hand-to-right position-relative"
+            >
               <img
                 class="img-fluid mb-3"
                 src="img/img_desc3.jpg"
@@ -224,7 +228,7 @@
       <nav
         class="nav flex-column flex-md-row align-items-center justify-content-md-center border-bottom border-primary"
       >
-        <a class="nav-link" href="index.html">Home</a>
+        <a class="nav-link" href="0-home.html">Home</a>
         <a class="nav-link" href="./1-city_description.html">Descrizione</a>
         <a class="nav-link" href="5-free_page.html">Storia</a>
         <a class="nav-link" href="2-services_descriptions.html">Servizi</a>
