--- a/2_1-service_description.html
+++ b/2_1-service_description.html
@@ -30,7 +30,7 @@
     >
       <div class="container-fluid">
         <!-- Logo -->
-        <a href="index.html" class="mx-3 navbar_brand">
+        <a href="0-home.html" class="mx-3 navbar_brand">
           <img class="img-fluid" id="logo" src="img/LogoWhite.svg" alt="logo" />
         </a>
 
@@ -113,7 +113,7 @@
         class="hero d-flex align-items-center justify-content-start"
         id="hero-benessere"
       >
-        <div class="hero-content bg-tertiary p-4 ps-5 text-light w-75">
+        <div class="hero-content bg-tertiary p-4 ps-md-5 text-light w-75">
           <h1>Servizio Benessere</h1>
           <h2 class="lead">
             La nostra priorità è il tuo benessere mentale. Siamo o non siamo
@@ -143,7 +143,9 @@
                 psicologico? Appena entrato in Oasis ti verrà assegnato uno
                 <strong>psicoterapeuta personale</strong> che seguirà e
                 monitorerà il tuo percorso psicologico costantemente con un
-                colloquio settimanale. Noi abbiamo a cuore il tuo benessere fisico e psicologico.Sei un nostro fedele cittadino e meriti il meglio.
+                colloquio settimanale. Noi abbiamo a cuore il tuo benessere
+                fisico e psicologico.Sei un nostro fedele cittadino e meriti il
+                meglio.
               </p>
             </div>
           </div>
@@ -174,12 +176,12 @@
                 </div>
                 <h3>Trattamenti termali</h3>
                 <p>
-                  Un’oasi di <strong>benessere</strong> lontana dagli
-                  impegni quotidiani e in cui trascorrere ore
-                  di completo relax per dimenticare il mondo al di là della
-                  cupola. Una volta assegnatoti questo trattamento, potrai
-                  scegliere tra diversi pacchetti benessere: manicure, pedicure,
-                  massaggi. A Oasis ci prendiamo cura di te e vogliamo farti
+                  Un’oasi di <strong>benessere</strong> lontana dagli impegni
+                  quotidiani e in cui trascorrere ore di completo relax per
+                  dimenticare il mondo al di là della cupola. Una volta
+                  assegnatoti questo trattamento, potrai scegliere tra diversi
+                  pacchetti benessere: manicure, pedicure, massaggi. A Oasis ci
+                  prendiamo cura di te e vogliamo farti
                   <strong>guarire</strong> da ogni preoccupazione.
                 </p>
               </div>
@@ -196,12 +198,12 @@
                 </div>
                 <h3>Trattamenti farmacologici</h3>
                 <p>
-                  Non c’è nulla che le nostre pillole non
-                  possano aggiustare. I nostri medici si attiveranno subito per
-                  capire quale prescriverti a seconda di dove è localizzato il
-                  tuo dolore. I nostri miracolosi medicinali ti
-                  faranno dimenticare ogni dolore. Ritrova la connessione con il
-                  tuo corpo e sarai <strong>libero</strong> dalle catene del passato.
+                  Non c’è nulla che le nostre pillole non possano aggiustare. I
+                  nostri medici si attiveranno subito per capire quale
+                  prescriverti a seconda di dove è localizzato il tuo dolore. I
+                  nostri miracolosi medicinali ti faranno dimenticare ogni
+                  dolore. Ritrova la connessione con il tuo corpo e sarai
+                  <strong>libero</strong> dalle catene del passato.
                 </p>
               </div>
             </div>
@@ -246,7 +248,7 @@
       <nav
         class="nav flex-column flex-md-row align-items-center justify-content-md-center border-bottom border-primary"
       >
-        <a class="nav-link" href="index.html">Home</a>
+        <a class="nav-link" href="0-home.html">Home</a>
         <a class="nav-link" href="1-city_description.html">Descrizione</a>
         <a class="nav-link" href="5-free_page.html">Storia</a>
         <a class="nav-link" href="2-services_descriptions.html">Servizi</a>
