--- a/2_2-service-description.html
+++ b/2_2-service-description.html
@@ -30,7 +30,7 @@
     >
       <div class="container-fluid">
         <!-- Logo -->
-        <a href="index.html" class="mx-3 navbar_brand">
+        <a href="0-home.html" class="mx-3 navbar_brand">
           <img class="img-fluid" id="logo" src="img/LogoWhite.svg" alt="logo" />
         </a>
 
@@ -113,7 +113,7 @@
         class="hero d-flex align-items-center justify-content-start"
         id="hero-formazione"
       >
-        <div class="hero-content bg-tertiary p-4 ps-5 text-light w-75">
+        <div class="hero-content bg-tertiary p-4 ps-md-5 text-light w-75">
           <h1>Servizio Formazione</h1>
           <h2 class="lead">
             Vogliamo sviluppare appieno il tuo potenziale per rendere perfetta
@@ -156,7 +156,8 @@
           <div class="mb-5">
             <h2 class="text-center">Le scuole</h2>
             <p class="lead text-center">
-              Gli psicologi sapranno poi indicarti l’unica direzione giusta per le tue inclinazioni.
+              Gli psicologi sapranno poi indicarti l’unica direzione giusta per
+              le tue inclinazioni.
             </p>
           </div>
 
@@ -179,8 +180,7 @@
                   necessarie a svolgere un lavoro pratico. Dal meccanico alla
                   parrucchiera, dal fabbro all’estetista: questa è la scuola che
                   fa per te. Inoltre ti insegneremo la difficile arte
-                  dell’ubbidienza e della
-                  disciplina.
+                  dell’ubbidienza e della disciplina.
                 </p>
               </div>
             </div>
@@ -197,10 +197,10 @@
                 <h3>Intellectus</h3>
                 <p>
                   Per te non esistono problemi, ma solo soluzioni? Non ti tiri
-                  indietro di fronte alla complessità, ma ti
-                  piace analizzarla in tutte le sue possibili sfaccettature? Ti
-                  definisci una persona analitica, metodica e logica? Oasis ha
-                  bisogno delle tue rarissime qualità per progredire verso il
+                  indietro di fronte alla complessità, ma ti piace analizzarla
+                  in tutte le sue possibili sfaccettature? Ti definisci una
+                  persona analitica, metodica e logica? Oasis ha bisogno delle
+                  tue rarissime qualità per progredire verso il
                   <strong>futuro</strong>. Alla fine degli studi potrai
                   scegliere tra professioni come matematico, biologo, chimico,
                   ingegnere, informatico.
@@ -246,7 +246,7 @@
       <nav
         class="nav flex-column flex-md-row align-items-center justify-content-md-center border-bottom border-primary"
       >
-        <a class="nav-link" href="index.html">Home</a>
+        <a class="nav-link" href="0-home.html">Home</a>
         <a class="nav-link" href="1-city_description.html">Descrizione</a>
         <a class="nav-link" href="5-free_page.html">Storia</a>
         <a class="nav-link" href="2-services_descriptions.html">Servizi</a>
