--- a/3-city_access.html
+++ b/3-city_access.html
@@ -26,16 +26,11 @@
 
   <body>
     <header
-      class="
-        navbar navbar-expand-lg navbar-dark
-        bg-transparent
-        fixed-top
-        link-white
-      "
+      class="navbar navbar-expand-lg navbar-dark bg-transparent fixed-top link-white"
     >
       <div class="container-fluid">
         <!-- Logo -->
-        <a href="index.html" class="mx-3 navbar_brand">
+        <a href="0-home.html" class="mx-3 navbar_brand">
           <img class="img-fluid" id="logo" src="img/LogoWhite.svg" alt="logo" />
         </a>
 
@@ -66,7 +61,9 @@
           <div class="offcanvas-body justify-content-lg-center">
             <ul class="navbar-nav">
               <li class="nav-item mx-lg-3">
-                <a href="1-city_description.html" class="nav-link">Descrizione</a>
+                <a href="1-city_description.html" class="nav-link"
+                  >Descrizione</a
+                >
               </li>
               <li class="nav-item mx-lg-3">
                 <a href="5-free_page.html" class="nav-link">Storia</a>
@@ -80,7 +77,9 @@
                 >
                 <ul class="dropdown-menu px-3">
                   <li>
-                    <a href="2-services_descriptions.html" class="dropdown-item">Generale</a>
+                    <a href="2-services_descriptions.html" class="dropdown-item"
+                      >Generale</a
+                    >
                   </li>
                   <li>
                     <hr class="dropdown-divider" />
@@ -91,7 +90,9 @@
                     >
                   </li>
                   <li>
-                    <a href="2_1-service_description.html" class="dropdown-item">Benessere</a>
+                    <a href="2_1-service_description.html" class="dropdown-item"
+                      >Benessere</a
+                    >
                   </li>
                 </ul>
               </li>
@@ -114,25 +115,17 @@
         class="hero d-flex align-items-center justify-content-start"
         id="hero-unisciti"
       >
-        <div class="hero-content bg-tertiary p-4 ps-5 text-light w-75">
+        <div class="hero-content bg-tertiary p-4 ps-md-5 text-light w-75">
           <h1 class="visually-hidden">Unisciti a noi</h1>
           <h2 class="h1">Ti senti cittadino di Oasis?</h2>
-          <h3 class="lead">
-            Scopri gli step per diventarlo
-          </h3>
+          <h3 class="lead">Scopri gli step per diventarlo</h3>
         </div>
       </section>
 
       <section class="py-5">
         <div class="container">
           <div
-            class="
-              row
-              gy-5 gy-md-0
-              gx-md-5
-              align-items-center
-              justify-content-between
-            "
+            class="row gy-5 gy-md-0 gx-md-5 align-items-center justify-content-between"
           >
             <div class="col-md col-lg-5 text-center">
               <img
@@ -154,24 +147,26 @@
                 <li>
                   <h3 class="lead">Conosciamoci</h3>
                   <p>
-                    Ti contatteremo per un breve <strong>colloquio online</strong>. Ti faremo
-                    delle domande sulle tue aspirazioni e su come pensi di
-                    contribuire a far crescere Oasis
+                    Ti contatteremo per un breve
+                    <strong>colloquio online</strong>. Ti faremo delle domande
+                    sulle tue aspirazioni e su come pensi di contribuire a far
+                    crescere Oasis
                   </p>
                 </li>
                 <li>
                   <h3 class="lead">Raggiungici</h3>
                   <p>
                     Se sarai idoneo, riceverai le coordinate geografiche precise
-                    per raggiungerci. All’arrivo dovrai esibire il <strong>codice</strong> di
-                    accettazione.
+                    per raggiungerci. All’arrivo dovrai esibire il
+                    <strong>codice</strong> di accettazione.
                   </p>
                 </li>
                 <li>
                   <h3 class="lead">Vivi</h3>
                   <p>
                     Finalmente fai parte della città più felice e pacifica del
-                    mondo. Cosa aspetti a viverla appieno imparando, lavorando, divertendoti e rilassandoti?
+                    mondo. Cosa aspetti a viverla appieno imparando, lavorando,
+                    divertendoti e rilassandoti?
                   </p>
                 </li>
               </ul>
@@ -183,13 +178,7 @@
       <section class="bg-primary py-5">
         <div class="container">
           <div
-            class="
-              row
-              gy-5 gy-md-0
-              gx-md-5
-              align-items-center
-              justify-content-between
-            "
+            class="row gy-5 gy-md-0 gx-md-5 align-items-center justify-content-between"
           >
             <div class="col-md col-lg-5">
               <h2>Compila il form</h2>
@@ -248,15 +237,9 @@
       </div>
       <!-- Links -->
       <nav
-        class="
-          nav
-          flex-column flex-md-row
-          align-items-center
-          justify-content-md-center
-          border-bottom border-primary
-        "
+        class="nav flex-column flex-md-row align-items-center justify-content-md-center border-bottom border-primary"
       >
-        <a class="nav-link" href="index.html">Home</a>
+        <a class="nav-link" href="0-home.html">Home</a>
         <a class="nav-link" href="1-city_description.html">Descrizione</a>
         <a class="nav-link" href="5-free_page.html">Storia</a>
         <a class="nav-link" href="2-services_descriptions.html">Servizi</a>
