--- a/4-free_page.html
+++ b/4-free_page.html
@@ -31,7 +31,7 @@
     >
       <div class="container-fluid">
         <!-- Logo -->
-        <a href="index.html" class="mx-3 navbar_brand">
+        <a href="0-home.html" class="mx-3 navbar_brand">
           <img class="img-fluid" id="logo" src="img/LogoWhite.svg" alt="logo" />
         </a>
 
@@ -112,7 +112,7 @@
         class="hero d-flex align-items-center justify-content-start"
         id="hero-eventi"
       >
-        <div class="hero-content bg-tertiary p-4 ps-5 text-light w-75">
+        <div class="hero-content bg-tertiary p-4 ps-md-5 text-light w-75">
           <h1>Partecipa ai nostri eventi</h1>
           <h2 class="lead">
             Ad Oasis non c'è tempo per annoiarsi. Offriamo eventi non-stop per
@@ -122,7 +122,7 @@
       </section>
 
       <section>
-        <div class="container p-5">
+        <div class="container py-5 px-md-5">
           <div class="row gy-5 justify-content-center">
             <div class="col-md-6">
               <div class="card text-light h-100">
@@ -134,7 +134,7 @@
                   />
                   <div class="card-img-overlay px-0">
                     <h3 class="card-title bg-primary-alpha p-3">
-                      Il parco divertimenti di Oasis
+                      Parco divertimenti
                     </h3>
                   </div>
                 </div>
@@ -155,7 +155,7 @@
                     data-bs-toggle="modal"
                     data-bs-target="#mymodal"
                   >
-                    PRENOTA
+                    Prenota
                   </button>
                 </div>
               </div>
@@ -191,7 +191,7 @@
                     data-bs-toggle="modal"
                     data-bs-target="#mymodal"
                   >
-                    PRENOTA
+                    Prenota
                   </button>
                 </div>
               </div>
@@ -228,7 +228,7 @@
                     data-bs-toggle="modal"
                     data-bs-target="#mymodal"
                   >
-                    PRENOTA
+                    Prenota
                   </button>
                 </div>
               </div>
@@ -262,7 +262,7 @@
                     data-bs-toggle="modal"
                     data-bs-target="#mymodal"
                   >
-                    PRENOTA
+                    Prenota
                   </button>
                 </div>
               </div>
@@ -311,7 +311,7 @@
       <nav
         class="nav flex-column flex-md-row align-items-center justify-content-md-center border-bottom border-primary"
       >
-        <a class="nav-link" href="index.html">Home</a>
+        <a class="nav-link" href="0-home.html">Home</a>
         <a class="nav-link" href="1-city_description.html">Descrizione</a>
         <a class="nav-link" href="5-free_page.html">Storia</a>
         <a class="nav-link" href="2-services_descriptions.html">Servizi</a>
