--- a/5-free_page.html
+++ b/5-free_page.html
@@ -23,16 +23,11 @@
   </head>
   <body>
     <header
-      class="
-        navbar navbar-expand-lg navbar-dark
-        bg-transparent
-        fixed-top
-        link-white
-      "
+      class="navbar navbar-expand-lg navbar-dark bg-transparent fixed-top link-white"
     >
       <div class="container-fluid">
         <!-- Logo -->
-        <a href="index.html" class="mx-3 navbar_brand">
+        <a href="0-home.html" class="mx-3 navbar_brand">
           <img class="img-fluid" id="logo" src="img/LogoWhite.svg" alt="logo" />
         </a>
 
@@ -63,7 +58,9 @@
           <div class="offcanvas-body justify-content-lg-center">
             <ul class="navbar-nav">
               <li class="nav-item mx-lg-3">
-                <a href="1-city_description.html" class="nav-link">Descrizione</a>
+                <a href="1-city_description.html" class="nav-link"
+                  >Descrizione</a
+                >
               </li>
               <li class="nav-item mx-lg-3">
                 <a href="5-free_page.html" class="nav-link active">Storia</a>
@@ -77,7 +74,9 @@
                 >
                 <ul class="dropdown-menu px-3">
                   <li>
-                    <a href="2-services_descriptions.html" class="dropdown-item">Generale</a>
+                    <a href="2-services_descriptions.html" class="dropdown-item"
+                      >Generale</a
+                    >
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
@@ -86,7 +85,9 @@
                     >
                   </li>
                   <li>
-                    <a href="2_1-service_description.html" class="dropdown-item">Benessere</a>
+                    <a href="2_1-service_description.html" class="dropdown-item"
+                      >Benessere</a
+                    >
                   </li>
                 </ul>
               </li>
@@ -102,16 +103,14 @@
       </div>
     </header>
 
-    <main class="mb-5">
+    <main>
       <section
         class="hero d-flex align-items-center justify-content-start"
         id="hero-storia"
       >
-        <div class="hero-content bg-tertiary p-4 ps-5 text-light w-75">
+        <div class="hero-content bg-tertiary p-4 ps-md-5 text-light w-75">
           <h1 class="h2">La nostra storia</h1>
-          <h2 class="lead">
-            Scopri come siamo diventati la città felice
-          </h2>
+          <h2 class="lead">Scopri come siamo diventati la città felice</h2>
         </div>
       </section>
 
@@ -133,10 +132,10 @@
             <div class="col-md-5">
               <h3 class="h2">Preludio</h3>
               <p>
-                E’ il 2020 e un piccolo gruppo di scenziati fa
-                una scoperta spaventosa. Il riscaldamento globale
-                sta accelerando e le previsioni si avvereranno in anticipo di
-                almeno dieci anni. Alcuni
+                E’ il 2020 e un piccolo gruppo di scenziati fa una scoperta
+                spaventosa. Il riscaldamento globale sta accelerando e le
+                previsioni si avvereranno in anticipo di almeno dieci anni.
+                Alcuni
                 <strong>imprenditori illuminati</strong>
                 iniziano a discutere di un nuovo progetto edilizio. La chiave di
                 tutto è l'<strong>acqua.</strong>
@@ -164,10 +163,14 @@
             <div class="col-md-5">
               <h3 class="h2">Nasce Oasis</h3>
               <p>
-                Nasce <strong>Oasis</strong>, una città in mezzo al Deserto Occidentale.
-                La sua posizione però è segreta per impedire che venga saccheggiata prima della catastrofe climatica, in quanto è l’unica città che si trova vicino ad una delle poche fonti d’acqua del pianeta.
-                Oasis è una piccola città inizialmente abitata dalle popolazioni vicine, ma è in crescita e governata da persone che non vedono l’ora di accogliere i futuri cittadini.
-
+                Nasce <strong>Oasis</strong>, una città in mezzo al Deserto
+                Occidentale. La sua posizione però è segreta per impedire che
+                venga saccheggiata prima della catastrofe climatica, in quanto è
+                l’unica città che si trova vicino ad una delle poche fonti
+                d’acqua del pianeta. Oasis è una piccola città inizialmente
+                abitata dalle popolazioni vicine, ma è in crescita e governata
+                da persone che non vedono l’ora di accogliere i futuri
+                cittadini.
               </p>
             </div>
           </div>
@@ -192,8 +195,14 @@
             <div class="col-md-5">
               <h3 class="h2">Dopo la catastrofe</h3>
               <p>
-                É il 2040 e il resto del mondo si desertifica a causa della catastrofe ambientale, che ha costretto tutti i cittadini ad emigrare nei luoghi più vicini alle poche fonti d’acqua rimaste.
-                É proprio quest’anno che il <strong>Signor Oasis</strong>, diventato sindaco, decide di trasformare la città, rendendola il più accogliente possibile per i cittadini che verrano a viverci.  Colorata e dall’aria felice, sembra il luogo più adatto per creare la nuova società del futuro.
+                É il 2040 e il resto del mondo si desertifica a causa della
+                catastrofe ambientale, che ha costretto tutti i cittadini ad
+                emigrare nei luoghi più vicini alle poche fonti d’acqua rimaste.
+                É proprio quest’anno che il <strong>Signor Oasis</strong>,
+                diventato sindaco, decide di trasformare la città, rendendola il
+                più accogliente possibile per i cittadini che verrano a viverci.
+                Colorata e dall’aria felice, sembra il luogo più adatto per
+                creare la nuova società del futuro.
               </p>
             </div>
           </div>
@@ -218,52 +227,63 @@
             <div class="col-md-5">
               <h3 class="h2">Oasis oggi</h3>
               <p>
-                Sono passati dieci anni dalla catastrofe ambientale e Oasis è diventata una città serena, che ha dimenticato le paure del passato.
-                Viene chiamata dai suoi cittadini <strong>La Città Felice</strong>, tutti sono felici della nuova vita che Oasis offre loro. Nessuno vuole e può allontanarsi da questo luogo di pace e serenità, sembra essere in un sogno dal quale non ci si può proprio svegliare.
+                Sono passati dieci anni dalla catastrofe ambientale e Oasis è
+                diventata una città serena, che ha dimenticato le paure del
+                passato. Viene chiamata dai suoi cittadini
+                <strong>La Città Felice</strong>, tutti sono felici della nuova
+                vita che Oasis offre loro. Nessuno vuole e può allontanarsi da
+                questo luogo di pace e serenità, sembra essere in un sogno dal
+                quale non ci si può proprio svegliare.
               </p>
             </div>
           </div>
         </div>
-        <br>
+        <br />
       </section>
 
       <section>
         <div class="bg-light-gray">
-        <br>
-        <div class="container pt-5">
-          <div class="row flex-md-row align-items-md-center">
-            <div class="col-md-5 text-center">
-              <img
-                class="img-fluid"
-                src="img/img_storia5.jpg"
-                alt="immagine del presente"
-              />
-            </div>
-            <div
-              class="col-md-2 pt-5 pt-md-0 align-self-stretch year-container"
-            >
-              <!--
+          <br />
+          <div class="container pt-5">
+            <div class="row flex-md-row align-items-md-center">
+              <div class="col-md-5 text-center">
+                <img
+                  class="img-fluid"
+                  src="img/img_storia5.jpg"
+                  alt="immagine del presente"
+                />
+              </div>
+              <div
+                class="col-md-2 pt-5 pt-md-0 align-self-stretch year-container"
+              >
+                <!--
                 md-stretch
                 d-md-flex
                 flex-md-column
                 align-items-md-center
                 justify-content-between
                 -->
-              <h2 class="story-year text-start"> <br></h2>
-            </div>
-            <div class="col-md-5">
-              <h3 class="h2">Il signor Oasis</h3>
-              <p>
-                Il Signor Oasis, la cui identità rimane ignota, ha un
-                cuore grande, grande come l’oasi di benessere che lui
-                stesso ha creato per il bene dell’umanità.Ha come obiettivo  far sentire in un sogno ad occhi aperti i suoi cittadini; un sogno bellissimo dal quale non vogliono e non possono più svegliarsi. La sua città è benefica, colorata e la cosa più importante è l’unica disponibile al momento. Solo cittadini prescelti, ubbedienti e che non creino caos e disordine possono essere realmente degni del benessere di questa città.
-              </p>
+                <h2 class="story-year text-start"><br /></h2>
+              </div>
+              <div class="col-md-5">
+                <h3 class="h2">Il signor Oasis</h3>
+                <p>
+                  Il <strong>Signor Oasis</strong>, la cui identità rimane
+                  ignota, ha un cuore grande, grande come l’oasi di benessere
+                  che lui stesso ha creato per il bene dell’umanità. Ha come
+                  obiettivo far sentire in un sogno ad occhi aperti i suoi
+                  cittadini, un sogno bellissimo dal quale non vogliono e non
+                  possono più svegliarsi. La sua città è benefica, colorata e la
+                  cosa più importante è l’unica disponibile al momento. Solo
+                  cittadini prescelti, ubbedienti e che non creino caos e
+                  disordine possono essere realmente degni del benessere di
+                  questa città.
+                </p>
+              </div>
             </div>
           </div>
         </div>
-      </div>
       </section>
-
     </main>
 
     <footer class="bg-secondary px-5">
@@ -273,15 +293,9 @@
       </div>
       <!-- Links -->
       <nav
-        class="
-          nav
-          flex-column flex-md-row
-          align-items-center
-          justify-content-md-center
-          border-bottom border-primary
-        "
+        class="nav flex-column flex-md-row align-items-center justify-content-md-center border-bottom border-primary"
       >
-        <a class="nav-link" href="index.html">Home</a>
+        <a class="nav-link" href="0-home.html">Home</a>
         <a class="nav-link" href="1-city_description.html">Descrizione</a>
         <a class="nav-link" href="./5-free_page.html">Storia</a>
         <a class="nav-link" href="2-services_descriptions.html">Servizi</a>
