--- a/2-services_descriptions.html
+++ b/2-services_descriptions.html
@@ -31,7 +31,7 @@
     >
       <div class="container-fluid">
         <!-- Logo -->
-        <a href="index.html" class="mx-3 navbar_brand">
+        <a href="0-home.html" class="mx-3 navbar_brand">
           <img class="img-fluid" id="logo" src="img/LogoWhite.svg" alt="logo" />
         </a>
 
@@ -114,7 +114,7 @@
         class="hero d-flex align-items-center justify-content-start"
         id="hero-servizi"
       >
-        <div class="hero-content bg-tertiary p-4 ps-5 text-light w-75">
+        <div class="hero-content bg-tertiary p-4 ps-md-5 text-light w-75">
           <h1>I servizi migliori</h1>
           <p class="lead">
             Scopri i servizi migliori, per allontanarti dalle paure del passato
@@ -236,7 +236,7 @@
       <nav
         class="nav flex-column flex-md-row align-items-center justify-content-md-center border-bottom border-primary"
       >
-        <a class="nav-link" href="index.html">Home</a>
+        <a class="nav-link" href="0-home.html">Home</a>
         <a class="nav-link" href="1-city_description.html">Descrizione</a>
         <a class="nav-link" href="5-free_page.html">Storia</a>
         <a class="nav-link" href="./2-services_descriptions.html">Servizi</a>
